--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,8 @@
 <html lang="es">
 
 <head>
-  <meta charset="utf-8" />
- 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
- 
-  <title>React App</title>
+  <meta charset="utf-8" /> 
+  <title>WebLucho</title>
 </head>
 
 <body>
